--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,13 @@
 {
-  "name": "Busanso Nation",
-  "short_name": "Busanso",
-  "start_url": "/index.html",
+  "name": "BUSANSO NATION",
+  "short_name": "BUSANSO",
+  "start_url": "/install.html",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
   "icons": [
-    {
-      "src": "icons/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
+    { "src": "icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
